reassembly post, fix references to dostrace

--- a/_posts/2022-12-09-reversing-2.md
+++ b/_posts/2022-12-09-reversing-2.md
@@ -27,6 +27,6 @@ __compiler__: As explained in a different post, F15 SE2 is written in Microsoft 
 
 __misc. others__: an unpacker for compressed EXEs, a hex editor, a calculator or a Python prompt for calculating offsets and such, a good code editor and other such nonsense.
 
-__dostrace__: for reasons explained later, I decided to [write my own tool](https://github.com/neuviemeporte/dostrace) for analyzing DOS executables. It is still a work in progress and doesn't do much, but I'm hoping to get it to a place where it can be useful in reversing other games than the one I'm working on.
+__mzretools__: for reasons explained later, I decided to [write my own tool](https://github.com/neuviemeporte/mzretools) for analyzing DOS executables. It is still a work in progress and doesn't do much, but I'm hoping to get it to a place where it can be useful in reversing other games than the one I'm working on.
 
 (continues in [Part 3](/f15-se2/2022/12/09/reversing-3.html))
