--- a/_posts/2023-03-23-farcalls.md
+++ b/_posts/2023-03-23-farcalls.md
@@ -5,7 +5,7 @@ category: f15-se2
 ---
 <small>(_This post is part of a [series]({% link category/f15-se2.html %}) on the subject of my hobby project, which is recreating the C source code for the 1989 game [F-15 Strike Eagle II]({% post_url 2022-06-05-origins %}) by reverse engineering the original binaries._)</small>
 
-I recently got the mzdiff tool in [dostrace](https://github.com/neuviemeporte/dostrace) to a point where I can give it one of the game executables and my C reimplementation executable, and it will compare them instruction-by-instruction (allowing for differences in file layout, particularly data and code addresses), so I sat down and started implementing the `main()` function of `START.EXE`, the first actual game exe which shows the title screen, lets you select a pilot, a mission, difficulty level, before showing you the targets and exiting (the actual flight is handled by `EGAME.EXE`). So I'm reviewing the disassembly in IDA and writing my C code based off it, got some instructions to match, which mzdiff helpfully shows, so I'm psyched. Then I hit this instruction:
+I recently got the mzdiff tool in [mzretools](https://github.com/neuviemeporte/mzretools) to a point where I can give it one of the game executables and my C reimplementation executable, and it will compare them instruction-by-instruction (allowing for differences in file layout, particularly data and code addresses), so I sat down and started implementing the `main()` function of `START.EXE`, the first actual game exe which shows the title screen, lets you select a pilot, a mission, difficulty level, before showing you the targets and exiting (the actual flight is handled by `EGAME.EXE`). So I'm reviewing the disassembly in IDA and writing my C code based off it, got some instructions to match, which mzdiff helpfully shows, so I'm psyched. Then I hit this instruction:
 
 {% highlight nasm %}
 call far 16b5:0c2f
@@ -295,13 +295,13 @@ int main() {
 }
 {% endhighlight %}
 
-...and here is the comparison of the generated assembly (on the right) with the original game exe's instructions (on the left). I am using my tool (mzdiff) from dostrace to compare the binaries, the '==' mark means an exact instruction match, '~=' or '=~' mean an inexact match with a difference in either the left or the right operand, and '!=' is of course a mismatch which interrupts the tool, telling me that I need to fix a mistake.
+...and here is the comparison of the generated assembly (on the right) with the original game exe's instructions (on the left). I am using my tool (mzdiff) from mzretools to compare the binaries, the '==' mark means an exact instruction match, '~=' or '=~' mean an inexact match with a difference in either the left or the right operand, and '!=' is of course a mismatch which interrupts the tool, telling me that I need to fix a mistake.
 
 {% highlight console %}
 ninja@dell:eaglestrike$ make verify
 cl /c /Gs  /Foe:\start.obj f15-se2\start.c
 link /M  start.obj slot.obj,d:\start.exe,,,
-../dostrace/debug/mzdiff ida/start.exe:10 build-f15-se2/start.exe:10 --verbose --loose --sdiff 1 --map map/start.map
+../mzretools/debug/mzdiff ida/start.exe:10 build-f15-se2/start.exe:10 --verbose --loose --sdiff 1 --map map/start.map
 Comparing code between reference (entrypoint 1000:0010/010010) and other (entrypoint 1000:0010/010010) executables
 Reference location @1000:0010/010010, routine 1000:0010-1000:0482/000473: main, block 010010-010482/000473, other @1000:0010/010010
 1000:0010/010010: push bp                          == 1000:0010/010010: push bp
