--- a/_posts/2023-05-17-compiler.md
+++ b/_posts/2023-05-17-compiler.md
@@ -66,7 +66,7 @@ link /M /NOD start.obj slot.obj,d:\start.exe,,slibce.lib;
 
 Excellent, now onto the second, more difficult problem. Comparing whether the instructions match manually is going to be a huge pain. I could disassemble the original and the partially reconstructed binary into textfiles and run a diff tool on the results, but it's going to show a lot of differences because, especially initially, the layout of the two files is going to be different, and the code/data addresses referenced by the instructions are going to be different, even if the code is correct, resulting in a lot of visual "chaff" that will distract from the actual meaningful differences that I want to see at first glance.
 
-This second problem actually took me almost two months to (mostly) solve to my satisfaction. I implemented the `mzdiff` tool in [dostrace](https://github.com/neuviemeporte/dostrace) which lets me specify the compared binaries, as well as the start locations in both I wish to compare at, and possibly some options on how strict the comparison should be. The tool decodes 8086 instructions and compares them, but not blindly byte by byte. When it sees an address operand that differs between the two, it will look it up in an address translation map between the two executables and see if the difference is consistent. If there is no translation, a new one will be recorded and kept for future reference. Here is a sample output:
+This second problem actually took me almost two months to (mostly) solve to my satisfaction. I implemented the `mzdiff` tool in [mzretools](https://github.com/neuviemeporte/mzretools) which lets me specify the compared binaries, as well as the start locations in both I wish to compare at, and possibly some options on how strict the comparison should be. The tool decodes 8086 instructions and compares them, but not blindly byte by byte. When it sees an address operand that differs between the two, it will look it up in an address translation map between the two executables and see if the difference is consistent. If there is no translation, a new one will be recorded and kept for future reference. Here is a sample output:
 
 ![mzdiff_demo](/images/mzdiff_demo.png){: .center-image }
 
