--- a/_posts/2023-07-12-overlays.md
+++ b/_posts/2023-07-12-overlays.md
@@ -88,6 +88,6 @@ After F15.COM loads these overlays, it will place their load segments in the COM
 
 From there, the remaining parts of the game (START, EGAME and END) will populate a statically-allocated array which initially just contains the far jump (0xEA) opcode followed by four null bytes, repeated the required number of times to cover the number of slots necessary. At runtime, the null bytes will be patched with the code segment of the overlay and an offset into a specific overlay function based on the overlay header and jump slot table. Later, when the game needs to invoke a driver function, it will do a [far call into a data segment location]({% post_url 2023-03-23-farcalls %}) corresponding to the function number (remember, each entry in the array is 5 bytes: the far jump opcode + the four byte far jump location), which in turn will do a far jump into the overlay function code, and the function always returns with `retf` to where it was called from. Simple, but effective.
 
-I have code for loading and setting up the overlays already reimplented in C, and it works, but the individual driver functions will need to be analyzed and understood for the source code reconstruction. They look like they have been hand-crafted in assembly - makes sense since they are low-level functions that need to perform efficiently, which makes me wonder how much of a penalty they are paying for doing a far call + far jump + far return every time a driver call is needed. In the final recreation, I probably will get rid of the overlays, since I'm planning to only support MCGA and no sound, and size is not a concern, so I think I'll just link in the driver code statically. For now, discovering and recreating this has been necessary to understand how the game works, and also for performing automated code comparison with dostrace/mzdiff - I need the code to match in regard to the emitted far calls to be able to compare the recreation to the original on an opcode-for-opcode basis.
+I have code for loading and setting up the overlays already reimplented in C, and it works, but the individual driver functions will need to be analyzed and understood for the source code reconstruction. They look like they have been hand-crafted in assembly - makes sense since they are low-level functions that need to perform efficiently, which makes me wonder how much of a penalty they are paying for doing a far call + far jump + far return every time a driver call is needed. In the final recreation, I probably will get rid of the overlays, since I'm planning to only support MCGA and no sound, and size is not a concern, so I think I'll just link in the driver code statically. For now, discovering and recreating this has been necessary to understand how the game works, and also for performing automated code comparison with mzretools/mzdiff - I need the code to match in regard to the emitted far calls to be able to compare the recreation to the original on an opcode-for-opcode basis.
 
 Interestingly, although [Civilization](https://en.wikipedia.org/wiki/Civilization_(video_game)) uses an almost identical setup menu and also contains multiple exes that look like sound and graphic drivers based on their name, the overlay header format of those seems to be different, and could not be parsed by my tool. Seems likey they were updating the scheme as they went along (Civ 1 came out 1991, so after F15-II).
