--- a/_posts/2023-05-18-compiler2.md
+++ b/_posts/2023-05-18-compiler2.md
@@ -45,7 +45,7 @@ I could not get it to emit matching code with any variant of a `for`, `while` or
 With `-O`, this is optimized to to a jump directly up to `0x3e` from `0x4a`, just like MSC does regarless of the options used. So the Borland compiler can generate code that's just as good as the Microsoft one, but it gives the user more control over the amount of optimizations that are desired. So, that's it then? We're home free? Well, unfortunately not:
 
 <pre>
-ninja@dell:eaglestrike$ ../dostrace/debug/mzdiff ida/start.exe:0x17 build-f15-se2/start.exe:0x18 --verbose --loose --sdiff 3 --variant --map map/start.map
+ninja@dell:eaglestrike$ ../mzretools/debug/mzdiff ida/start.exe:0x17 build-f15-se2/start.exe:0x18 --verbose --loose --sdiff 3 --variant --map map/start.map
 Comparing code between reference (entrypoint 1000:0017/010017) and other (entrypoint 1000:0018/010018) executables
 --- Now @1000:0017/010017, routine 1000:0010-1000:0482/000473: main, block 010010-010482/000473, compared @1000:0018/010018
 [...]
@@ -120,7 +120,7 @@ I ran out of compilers to try. On one hand, the superfluous jumps feel uniquely 
 Well, perhaps then the loop was written using the inline assembly feature of MSC 6.0? Come to think of it, this could be a good time to compare the 1989 version of the game with the 1991 one. Perhaps the loop is also there in the older version? Sure enough, here it is:
 
 <pre>
-ninja@dell:eaglestrike$ ../dostrace/debug/mzdiff ida/start_new.exe:0x100 ida/start_old.exe:0xf9 --verbose --loose
+ninja@dell:eaglestrike$ ../mzretools/debug/mzdiff ida/start_new.exe:0x100 ida/start_old.exe:0xf9 --verbose --loose
 Comparing code between reference (entrypoint 1000:0100/010100) and other (entrypoint 1000:00f9/0100f9) executables
 --- Now @1000:0100/010100, compared @1000:00f9/0100f9
 1000:0100/010100: mov byte [0x76e], 0x0            ~= 1000:00f9/0100f9: mov byte [0x52e], 0x0
