--- a/_posts/2023-09-02-compiler3.md
+++ b/_posts/2023-09-02-compiler3.md
@@ -136,7 +136,7 @@ I need to go back and figure out which compiler was used and with what flags. Wi
 
 First thing I tried was getting rid of the suspense and putting the Watcom question out of the way. I could not locate a copy of Watcom C 6.0/7.0 which appear to best match the release date of the game, so I tried the next best thing with [OpenWatcom](http://open-watcom.github.io/). Hopefully they did not change the code generation too much in 30+ years? The code it produced didn't look close at all. I tried several optimization variants but there were just too many differences all over. I particular, `test ax,ax` was used instead of `or ax,ax`, multiple registers were pushed in preambles of functions, arithmetic registers were used instead of immediate values in instructions etc. Scratch that off, at least until I can find a copy of the old version, but I don't think it's a likely target.
 
-The standalone versions of [QuickC](https://en.wikipedia.org/wiki/QuickC) are still on the table. Version 1.01 was bundled with MSC 5.1 and I tried it in Part 2, but it produced horribly unoptimized code. Wikipedia says that QuickC was introduced as Microsoft's answer to Borland's Turbo C - an enthusiast-oriented compiler that is cheaper and a step down from the big-boy MSC. Turbo C produces quite neat code, so maybe the 2.x releases of Quick C are somewhat better if they want to compete with Turbo C? But at the same time it shoud not be too good, or I will end up with the same problems as with using the full-featured MSC right now. Well, no luck again, with no optimization flags it uses `mov ax,0` instead of `sub ax,ax` which  need. With `/Ot` it uses `xor ax,ax` (and signedness of the argument it's creating does not matter). It also puts a `jmp short` to a loop condition at the end and does some other weird stuff. It's not the right one.
+The standalone versions of [QuickC](https://en.wikipedia.org/wiki/QuickC) are still on the table. Version 1.01 was bundled with MSC 5.1 and I tried it in Part 2, but it produced horribly unoptimized code. Wikipedia says that QuickC was introduced as Microsoft's answer to Borland's Turbo C - an enthusiast-oriented compiler that is cheaper and a step down from the big-boy MSC. Turbo C produces quite neat code, so maybe the 2.x releases of Quick C are somewhat better if they want to compete with Turbo C? But at the same time it shoud not be too good, or I will end up with the same problems as with using the full-featured MSC right now. Well, no luck again, with no optimization flags it uses `mov ax,0` instead of `sub ax,ax` which I need. With `/Ot` it uses `xor ax,ax` (and signedness of the argument it's creating does not matter). It also puts a `jmp short` to a loop condition at the end and does some other weird stuff. It's not the right one.
 
 I had already tried MSC 5.0, 4.0 and 3.0 in hope that they perhaps differ somewhat in their generation of optimized code, but it turned out not to be the case. The difference is mainly in the language feature set supported by the newer versions - in particular, the older versions required function definitions to follow the ancient K&R style and were missing library functions which are now considered standard, but they still optimize loops in exactly the same way. MSC 2.0 is a different case however. It is basically a rebranding of the [Lattice C](https://en.wikipedia.org/wiki/Lattice_C) compiler before Microsoft made their own thing with 3.0, so I was expecting its output to differ. Rightly so, it turned out, however again - not in the way I needed. It put the outer loop condition in the expected place, but the jump sequence was all wrong, more like QuickC with optimizations disabled. This was an interesting excursion, however. I never worked with a compiler which did not support the `void` type before. Also, there were some limitations on the use of whitespace, and the compiler itself worked in two passes. There are two executables, `MC1.EXE` and `MC2.EXE`. The output of the first is a `.Q` or "quad" file, and the other turns it into the expected `.OBJ`. 
 
@@ -226,6 +226,6 @@ That explains everything. Unlike `/Od` which disables optimizations completely, 
 
 The commit history on my git repo for the reconstruction shows that I first hit the problematic loop for which I was unable to write C code that would exactly match the game's opcodes on 29th March. It's the end of August and I finally figured it out. Everything works now, there were a couple of divergences which were easy to tweak into 100% matching code. It's actually eerie watching mzdiff display no skips and large swaths of exactly equal instructions, with only the occasional offset difference in orange. 
 
-So, did I just "waste" 5 months? No, I don't think so. I learned a lot about how the compiler works and got a feel for the flow of opcodes and how they map to C code. I can now write easier conditions or loops as I read them. I can tell optimized from unoptimized code at a glance. It was extremely frustrating for a while, but the sense of satisfaction I got from finally finding the magic flag that somebody forgot to disable before making the final build is proportionally exhilarating. I managed to uncover a cool fact about the game, and it being build in debug mode means the instructions will be likely easier to follow.
+So, did I just "waste" 5 months? No, I don't think so. I learned a lot about how the compiler works and got a feel for the flow of opcodes and how they map to C code. I can now write easier conditions or loops as I read them. I can tell optimized from unoptimized code at a glance. It was extremely frustrating for a while, but the sense of satisfaction I got from finally finding the magic flag that somebody forgot to disable before making the final build is proportionally exhilarating. I managed to uncover a cool fact about the game, and it being built in debug mode means the instructions will be likely easier to follow.
 
 It's my own fault really for not RTFM'ing more carefully and assuming only the `/O` options could influence optimizations, but you have to admit that the option descriptions in the output of the compiler are misleading, to put it mildly. I recall searching the manual for all occurences of "optimization" at some point, but this is a scanned document and text search does not always work on it. Or maybe it did find the occurence, but I glossed over it after seeing "symbols"? Well, no point in wondering now. The project is back on track, I'm churning out functions like mad. I'm looking forward to being done with `START.EXE` and moving onto `EGAME.EXE` in the near future.
