--- a/_posts/2023-12-30-unlink.md
+++ b/_posts/2023-12-30-unlink.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: First steps in unlinking
+title: First steps in delinking
 category: f15-se2
 ---
 <small>(_This post is part of a [series]({% link category/f15-se2.html %}) on the subject of my hobby project, which is recreating the C source code for the 1989 game [F-15 Strike Eagle II]({% post_url 2022-06-05-origins %}) by reverse engineering the original binaries._)</small>
