part 2 of delinking

--- a/_posts/2023-12-30-unlink.md
+++ b/_posts/2023-12-30-unlink.md
@@ -7,11 +7,11 @@ category: f15-se2
 
 As things stand today, looking around the first game executable which I'm reconstructing (`START.EXE`), it seems like there's more than I don't know about the game then I do know, especially when looking at the contents of the data segment. Some data is obvious (strings), some I have figured out by examining routines and figuring out what the data referenced in those routines are for, but the vast majority is a bunch of meaningless values (or no values for the uninitialized data/BSS, but we'll get to that later). Today, I'm trying to do something about it.
 
-A significant chunk of the game's code is made of the standard C library subroutines, which I have identified a long time ago using IDA's feature of routine signatures. They begin at offset `0x5542` with the `start` routine which is the startup/CRT0 code that serves as the entrypoint to the program which ends up calling `main()`. Other libc subroutines follow until an unknown subroutine (no idea why it's unknown yet still recognized by IDA as part of libc) ends at offset `0x6a5b`, which is also the end of the first code segment (there are two). 
+A significant chunk of the game's code is made of the standard C library subroutines, which I have identified a long time ago using IDA's feature of routine signatures. They begin at offset `0x5542` with the `start` routine which is the startup (aka crt0) code that serves as the entrypoint to the program and ends up calling `main()`. Other libc subroutines follow until an unnamed subroutine (not public so the name likely got stripped, but it's still recognized as belonging to libc by IDA) ends at offset `0x6a5b`, which is also the end of the first code segment (there are two). 
 
 Knowing about these subroutines means less work for me because I don't need to analyze them to know what they are doing, or reimplement them. They also serve as an useful anchor for the actual game routines - if a game routine calls `strcpy()`, that means I can understand what it's doing on a higher lever, and also infer something about the data that's used as arguments for that function.
 
-But the libc functions also come with data of their own (initialized and uninitialized) that is merged with the game data to form the complete executable, with no apparent way to tell it apart. If I knew where it was, I could also ignore it while doing the reconstruction, and also I would know what to skip when trying to reconstruct the contents of the data segment. If I ever want to get an identically reconstructed executable, I need to know where it begins and ends, so that when the final result is linked with libc again, I would not end up with duplicate data. So let's try to figure it out.
+But the libc functions also come with data of their own (initialized and uninitialized) that is merged with the game data to form the complete executable, with no apparent way to tell it apart. If I knew where it was, I could also ignore it while analyzing the disassembly, and also I would know what to skip when trying to reconstruct the contents of the data segment. If I ever want to get an identically reconstructed executable, I need to know where it begins and ends, so that when the final result is linked with libc again, I would not end up with duplicate data. So let's try to figure it out.
 
 The inspiration for this came from reading [this blog](https://boricj.net/) where the author uses some clever tricks to undo linking with the help of [Ghidra](https://ghidra-sre.org/) and a [custom extension](https://github.com/boricj/ghidra-delinker-extension), the end result being functional object files which can be linked with custom code again to form a patched game executable. That way it might be possible to excise ancient APIs, provide modern replacements, instrumentation etc., otherwise using the game logic as is. But that approach is used with MIPS code for a PSX game, and it's not clear whether it could be adopted to x86 code, especially in real mode. I won't be doing anything as ambitious, but I will try to figure out where exactly the linker put the libc data.
 
@@ -24,7 +24,7 @@ The plan is as follows:
 
 ## First step, an exe with no libc
 
-I'm starting with compiling a trivial C program with no libc at all. Such a program is useless, since the C `main()` function will not work unless the startup code (aka CRT0) ran first to set things up - C might be a simple and low-level language, but it still needs minimal run-time support. Luckily, I don't need the sample programs I'm building today to be functional, just so long as they link.
+I'm starting with compiling a trivial C program with no libc at all. Such a program is useless, since the C `main()` function will not work unless the startup code ran first to set things up - C might be a simple and low-level language, but it still needs minimal run-time support. Luckily, I don't need the sample programs I'm building today to be functional, just so long as they link.
 
 {% highlight cpp %}
 // hello.c
@@ -45,7 +45,7 @@ int main() {
 }
 {% endhighlight %}
 
-I mentioned the `__acrtused` (remember, the C compiler adds one underscore to all names) symbol before, it's a tag that the linker uses to determine that the startup code is already present. What it is doesn't really matter as long as it's there. So let's build this. I'm using the `/NOD[EFAULT]` option to the linker to prevent linking with libc, which would happen by default, because the object file `hello.obj` contains an entry for a default library to link with after it's been compiled. The remaining `/M /I` cause the linker to generate a map file and verbose output.
+I encountered the `__acrtused` symbol (remember, the C compiler adds one underscore to all names) before, it's a tag that the linker uses to determine that the startup code is already present. What it is doesn't really matter as long as it's there. So let's build this. I'm using the `/NOD[EFAULT]` option to the linker to prevent linking with libc, which would happen by default, because the object file `hello.obj` contains an entry for a default library to link with after it's been compiled. The remaining `/M /I` cause the linker to generate a map file and verbose output.
 
 <pre>
 ninja@dell:eaglestrike$ make hello
@@ -121,7 +121,7 @@ A thing to note for the future is that null bytes that are not part of the origi
 
 ## Adding in the startup code
 
-Looking good, wonder what will happen when I link in the actual libc startup code? For that I need to remove the `__acrtused` tag and either get rid of the `/NOD` option, or spell the name of the appropriate library file (`slibce.lib` for (s)mall memory model and software (e)mulated floating point) on the linker command line - I choose the latter.
+Looking good, wonder what will happen when I link in the actual libc startup code? For that I need to remove the `__acrtused` tag and either get rid of the `/NOD` option, or spell the name of the appropriate library file (`slibce.lib` for <b>s</b>mall memory model and software <b>e</b>mulated floating point) on the linker command line - I choose the latter.
 
 <pre>
 ninja@dell:eaglestrike$ make hello
@@ -129,8 +129,6 @@ cl /Gs /c /Foe:\hello.obj hello.c
 link /M /I /NOD  hello.obj,d:\hello.exe,,slibce.lib;
 ls -l build-f15-se2/hello.exe
 -rw-r--r-- 1 ninja ninja 2325 Dec 24  2023 build-f15-se2/hello.exe
-md5sum build-f15-se2/hello.exe
-03f9b3c84f3d985bb6a54070a79c8dd6  build-f15-se2/hello.exe
 </pre>
 
 That makes for a hefty increase to 2325 bytes. Let's look inside.
@@ -208,14 +206,16 @@ dseg:01CF                 db '- null pointer assignment',0Dh,0Ah,0
 dseg:01F2                 db 0FFh
 dseg:01F3                 db 0FFh
 dseg:01F4                 db 0FFh            ; 3x 0FFh, libc initialized data end marker?
-dseg:01F5                 db 0Bh dup (?)     ; 11 bytes of uninitialized data, presumably from libc startup code
+dseg:01F5                 db 0Bh dup (?)     ; 11 bytes of uninitialized data, 
+                                             ; presumably from libc startup code,
+                                             ; probably some alignment too, the next offset is too neat
 dseg:0200 word_10720      dw ?               ; x
 dseg:0202 word_10722      dw ?               ; y
 dseg:0204                 align 10h
 dseg:0204 dseg            ends
 {% endhighlight %}
 
-15 routines (and a "chunk" which in IDA speak is a disconnected part of a routine) made it into the executable. I am not sure about the unnamed (`sub_...`) ones, but they are recognized as part of libc by IDA, just something to keep in mind.
+15 routines (and a "chunk" which in IDA speak is a disconnected part of a routine) made it into the executable. The unnamed (`sub_...`) ones are also recognized as part of libc by IDA, they are referenced by the named ones, just lost their names to stripping.
 
 The real meat of this part of the experiment comes from the contents of the data segment. It opens with two null bytes, then a word value that's referenced from `start`, that is the crt0 code. More null bytes follow, then the MSC library watermark which I know from the game, followed by 0x11, 0x0... and my code's data begins. After it ends, more libc data continues. The initialized libc data ends with some error strings, and an apparent termination marker of 3 times 0xff. Following that are 11 (0xb) bytes of unitialized data before the two uninitialized variables of my own, and the data segment concludes.
 
@@ -224,6 +224,8 @@ The real meat of this part of the experiment comes from the contents of the data
 Here's where it gets even more interesting. I look over the 63 items identified as originating from libc by IDA in the game's executable, 5 of which are chunks. Out of the remaining ones, the `__`-prefixed ones are internal routines, which were not likely referenced directly, but were pulled in as dependencies. That leaves us with a small subset of actual libc functions that the game uses. I don't really care about their signatures, and neither does the linker, so it will suffice to declare them as whatever and attempt to call them from my `main()`.
 
 {% highlight cpp %}
+// hello.c
+
 // the signatures are not important for linking, only the name matters
 void exit();
 void getch();
@@ -335,7 +337,7 @@ C:\msc510\lib\SLIBCE.LIB(dos\stdargv.asm) : error L2044: __setargv : symbol mult
 [...]
 </pre>
 
-That is very strange, why is the symbol multiply defined? I would expect the linker to only pull in functions from the library which could not be resolved locally, yet it seems to be grabbing the library version while it has my replacement, and the two clash? Using `/NOE` does indeed let it link successfully, but it has unwanted side effects in that the order of libc routines within the executable changes. Before overriding the libc functions and adding `/NOE`, both my `hello.exe` and the game executable have libc routines arranged in this order (of course, the offsets differ):
+That is very strange, why is the symbol multiply defined? I would expect the linker to only pull in functions from the library which could not be resolved locally, yet it seems to be grabbing the library version while it has my replacement readily available, and the two clash? Using `/NOE` does indeed let it link successfully, but it has unwanted side effects in that the order of libc routines within the executable changes. Before overriding the libc functions and adding `/NOE`, both my `hello.exe` and the game executable have libc routines arranged in this order (of course, the offsets differ):
 
 <pre>
 seg000:0056 ; [000000B2 BYTES: COLLAPSED FUNCTION start. PRESS CTRL-NUMPAD+ TO EXPAND] 🟡 the startup (entrypoint) routine
@@ -343,7 +345,7 @@ seg000:0108 ; [000000C4 BYTES: COLLAPSED FUNCTION __cinit. PRESS CTRL-NUMPAD+ TO
 seg000:01CC ; [00000017 BYTES: COLLAPSED FUNCTION _exit. PRESS CTRL-NUMPAD+ TO EXPAND]
 seg000:01E3 ; [00000045 BYTES: COLLAPSED FUNCTION __exit. PRESS CTRL-NUMPAD+ TO EXPAND]
 seg000:0228 ; [0000002D BYTES: COLLAPSED FUNCTION __ctermsub. PRESS CTRL-NUMPAD+ TO EXPAND]
-seg000:0255 ; [0000000F BYTES: COLLAPSED FUNCTION sub_10255. PRESS CTRL-NUMPAD+ TO EXPAND] 🟡 two unknown functions recognized as part of libc by IDA
+seg000:0255 ; [0000000F BYTES: COLLAPSED FUNCTION sub_10255. PRESS CTRL-NUMPAD+ TO EXPAND] 🟡 two unnamed unknown functions recognized as part of libc by IDA
 seg000:0264 ; [00000013 BYTES: COLLAPSED FUNCTION sub_10264. PRESS CTRL-NUMPAD+ TO EXPAND]
 seg000:0277                 align 2
 seg000:0278 ; [00000020 BYTES: COLLAPSED FUNCTION __FF_MSGBANNER. PRESS CTRL-NUMPAD+ TO EXPAND]
@@ -478,7 +480,7 @@ ls -l build-f15-se2/hello.exe
 -rw-r--r-- 1 ninja ninja 6855 Dec 30  2023 build-f15-se2/hello.exe
 </pre>
 
-The executable is almost 7kB in size now. That's the overhead of libc on the game, close to 15%. But now let's look at the data segment.
+The executable is a little short of 7kB in size now. That's the overhead of libc on the game, about 15%. But now let's look at the data segment.
 
 Within the initialized data, not much has changed. Starting from the top we have:
 
@@ -492,7 +494,7 @@ The problem lies in the layout of the BSS (uninitialized) section:
 <pre>
 dseg:0346                 db 0FFh
 dseg:0347                 db 0FFh
-dseg:0348                 db 0FFh
+dseg:0348                 db 0FFh 🟢 libc initialized data ends here, BSS begins
 dseg:0349                 db 407h dup(   ?)       ; 😭😭😭
 dseg:0750 word_11CD0      dw ?                    ; x
 dseg:0752 word_11CD2      dw ?                    ; y
@@ -510,4 +512,4 @@ This seems like little return for a lot of work, but I've got some ideas to foll
 - try removing all the functions and readding them one by one, try to match BSS regions with libc modules
 - keep reversing the game, marking up all uninitialized data used by the game means what remains comes from libc - the hard way
 
-This will have to wait for the next time though, since this post is already too long.
+This will have to wait for the [next time]({% post_url 2024-01-07-unlink2 %}) next time though, since this post is already too long.
