--- a/_posts/2023-09-02-compiler3.md
+++ b/_posts/2023-09-02-compiler3.md
@@ -130,7 +130,7 @@ Compile, link, compare. Well of course it does not match.
 
 A familiar scenario repeats itself as with the previous loop - no matter what I try, the condition is placed at the end. I tried every single variant of the code, a `for`, a `do-while`, even a `goto`-based monstrosity. Same story. Optimization flags don't have an influence except for `/Od` - disable optimizations. But in that case, the code is a complete mess that doesn't look close to what I need either. 
 
-The problem this time is that it's not enough to skip a couple of instructions. An entire code block is moved elsewhere. Unless I am willing to make the tool search for a match (not mentioning hot to approach checking if a moved section will behave the same in a different location), or increase the allowed skip count, there doesn't seem to be anything else I can do. I'm screwed. Pushing ahead against an ever-increasing number of divergences doesn't look feasible anymore.
+The problem this time is that it's not enough to skip a couple of instructions. An entire code block is moved elsewhere. Unless I am willing to make the tool search for a match (not mentioning how to approach checking if a moved section will behave the same in a different location), or increase the allowed skip count, there doesn't seem to be anything else I can do, and pushing ahead against an ever-increasing number of divergences doesn't look feasible anymore.
 
 I need to go back and figure out which compiler was used and with what flags. Without having that part down, I'm screwed. So I catch a deep breath and dive into it again.
 
