fix minor stuff in ghidra post

--- a/_posts/2024-05-05-ghidra.md
+++ b/_posts/2024-05-05-ghidra.md
@@ -254,10 +254,12 @@ startCode1:4790			mov	word_182BE, ax
 
 8bit register halves like `ah` are rarely used unless explicit 8bit value manipulation is requested, and it's especially strange in the middle of what appears to be regular 16bit calculation. Oddly enough, it appears to be a shortcut to adding a constant number whose lower byte is zero, and is matched by the code below:
 
+{% highlight cpp %}
 unsigned int word_182BE;
 int func2() {
     word_182BE = ((word_182BE >> 0xa) << 0xa) + 0x200;
 }
+{% endhighlight %}
 
 # This will be the last arithmetic puzzle, I promise
 
@@ -313,7 +315,7 @@ startCode1:4A28			dw offset case578_149FB
 startCode1:4A2A			dw offset case578_149FB
 {% endhighlight %}
 
-As expected, a jump table like this is used to implement a switch statement. It's doing a `cmp` to make sure the value is within the bounds of the jump table, then doubles the value with `add` to account for the fact that entries in the jump table are 2 bytes long (16bit offsets), finally places the offset into bx and does a jump into a location from the jump table. Here, a minor twist lies in the fact that one of the cases is empty, and the switch just jumps to the same bit of code for the values of 2/4/6 as when the value is out of bounds. Might also been written as a fall-through into the default case, but right now I have it like this:
+As expected, a jump table like this is used to implement a switch statement. It's doing a `cmp` to make sure the value is within the bounds of the jump table, then doubles the value with `add` to account for the fact that entries in the jump table are 2 bytes long (16bit offsets), finally places the offset into `bx` and does a jump into a location from the jump table. Here, a minor twist lies in the fact that one of the cases is empty, and the switch just jumps to the same bit of code for the values of 2/4/6 as when the value is out of bounds. Might also been written as a fall-through into the default case, but right now I have it like this:
 
 {% highlight cpp %}
     // 4a0d
